--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
+            <a href="index.html" class="navbar-brand image-logo"><img src="assets/img/logo.png" alt=""></a>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
@@ -75,7 +75,7 @@
               </li>
             </ul>
           </div>
-          <img class="img-fluid" src="assets/img/image.png" alt="">
+          <img class="img-fluid image-logo" src="assets/img/image.png" alt="">
         </div>
 
         <!-- Mobile Menu Start -->
@@ -113,7 +113,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="assets/img/itpark.jpeg" alt="First slide">
+            <img class="d-block w-100" src="assets/img/slider/slide2.jpg" alt="First slide">
             <div class="carousel-caption d-md-block">
               <h1 class="college-name wow fadeInDown" data-wow-delay=".4s">Kongu Engineering College</h1>
               <p class="location wow fadeInUp" data-wow-delay=".5s">Perundurai</p>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-10" src="assets/img/slider/slide2.jpg" alt="Second slide">
+            <img class="d-block w-10" src="assets/img/itpark.jpeg" alt="Second slide">
             <div class="carousel-caption d-md-block">
               <div class="carousel-caption d-md-block">
                 <h1 class="college-name wow fadeInDown" data-wow-delay=".4s">Kongu Engineering College</h1>
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row">
           <div  id="about" class="col-12">
-            <br><br><br><br><br>
+            <br><br><br><br><br><br><br>
             <div class="section-title-header text-center">
               <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Events</h1>
               <h5 class="wow fadeInDown" data-wow-delay="0.2s">Tech Events</h5>
@@ -350,7 +350,7 @@
 
     <!-- Ask Question Section Start -->
     <section id="faq" class="section-padding">
-      <br><br><br>
+      <br><br><br><br><br>
       <div class="container">
         <div class="row">
           <div class="col-12">
