--- a/index.html
+++ b/index.html
@@ -106,14 +106,10 @@
 
       <!-- Main Carousel Section Start -->
       <div id="main-slide" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#main-slide" data-slide-to="0" class="active"></li>
-          <li data-target="#main-slide" data-slide-to="1"></li>
-          <li data-target="#main-slide" data-slide-to="2"></li>
-        </ol>
+        
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="assets/img/slider/slide2.jpg" alt="First slide">
+            <img class="d-block w-100 secondimae" src="assets/img/slider/slide2.jpg" alt="First slide">
             <div class="carousel-caption d-md-block">
               <h1 class="college-name wow fadeInDown" data-wow-delay=".4s">Kongu Engineering College</h1>
               <p class="location wow fadeInUp" data-wow-delay=".5s">Perundurai</p>
@@ -125,7 +121,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-10" src="assets/img/itpark.jpeg" alt="Second slide">
+            <img class="d-block w-100 secondimae" src="assets/img/itpark.jpeg" alt="Second slide">
             <div class="carousel-caption d-md-block">
               <div class="carousel-caption d-md-block">
                 <h1 class="college-name wow fadeInDown" data-wow-delay=".4s">Kongu Engineering College</h1>
