--- a/index.html
+++ b/index.html
@@ -120,18 +120,9 @@
               <a href="#pricing" class="fadeInUp wow btn btn-common btn-lg" data-wow-delay="1s">Explore</a>
             </div>
           </div>
-          
           </div>
         </div>
-        <a class="carousel-control-prev" href="#main-slide" role="button" data-slide="prev">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-left"></i></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#main-slide" role="button" data-slide="next">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-right"></i></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+
       <!-- Main Carousel Section End -->
 
     </header>
@@ -510,6 +501,15 @@ setInterval(updateCountdown, 1000);
 updateCountdown();
 
     </script>
+    <script>
+      document.addEventListener("mousemove", (e) => {
+          let x = e.clientX / window.innerWidth * 100;
+          let y = e.clientY / window.innerHeight * 100;
+
+          document.querySelector(".count").style.background = 
+              `radial-gradient(circle at ${x}% ${y}%, pink 50%, blue 75%, orange 90%)`;
+      });
+  </script>
     
   </body>
 </html>
