--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
 
 
     <!-- Counter Area Start-->
-    <section class="counter-section section-padding">
+    <section class="counter-section section-padding" style="display: flex; justify-content: center;">
       <div class="container">
-        <div class="row">
+        <div class="row" style="display: flex; justify-content: center;">
           <!-- Counter Item -->
           <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.3s">
@@ -303,18 +303,17 @@
             </div>
           </div>
           <!-- Counter Item -->
-           
           <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.9s">
               <div class="icon"><i class="lni-medall"></i></div>
-              <p>Certificates</p>       
-              <span>Hurryup! few tickets are left</span>
+              <p>Certificates</p>
+              <span>Hurry up! Few tickets are left</span>
             </div>
           </div>
-          <!-- Counter Item -->
         </div>
       </div>
     </section>
+    
     <!-- Counter Area End-->
 
     <!-- Ask Question Section Start -->
