--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="about-item">
-                    <img class="img-fluid" src="assets/img//iloveimg-resized (1)/paper.jpg" alt="">
+                    <img class="img-fluid" src="assets/img//iloveimg-resized (1)/presentation.jpg" alt="">
                     <div class="about-text text-center">
                       <h3><a href="#">Paper Presentation</a></h3>
                       <p>Team - Size : 2 - 3 members</p>
