--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="heading-count">
               <br><br><br><br>
-              <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
+              <!-- <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2> -->
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
